The system now makes i elements inert. Updated to avoid blurring those.
Loc key fixes.

Misc corrections and adjustments from data model changes.

--- a/src/scss/classic/classic-app-v2.scss
+++ b/src/scss/classic/classic-app-v2.scss
@@ -303,7 +303,7 @@
   }
 
   /* Unidentified Item Concealment */
-  [inert] {
+  [inert]:not(i) {
     filter: blur(0.375rem) grayscale(100%) contrast(0%) opacity(50%);
     padding: 0.375rem;
   }
